--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,6 +4,9 @@
     <string name="app_name">CalculateWay</string>
     <string name="action_settings">Settings</string>
     <string name="ready"> Are You Ready? </string>
-    <string name="go_button">Go!</string>
-
+    <string name="start_button">スタート！</string>    
+    <string name="goal_button">ゴール！</string>
+    <string name="save_button">保存</string>
+	<string name="load_button">表示</string>
+        
 </resources>
